--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,9 +1,17 @@
+@import url("https://use.typekit.net/cxe6slk.css");
+
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
 html,
 body {
   padding: 0;
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
-    Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+  font-family: "sofia-pro", sans-serif;
+  /* font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
+    Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif; */
+  background-color: #000000;
 }
 
 a {
@@ -13,4 +21,16 @@ a {
 
 * {
   box-sizing: border-box;
+}
+
+@layer components {
+  .textGradientWelcome {
+    @apply bg-gradient-to-br from-[#CB5EEE] via-[#4BE1EC] to-[#ff9472]  bg-clip-text text-transparent;
+  }
+}
+
+@layer components {
+  .textGradientVariant {
+    @apply bg-gradient-to-br from-[#4BE1EC] to-[#ff9472]  bg-clip-text text-transparent;
+  }
 }
